// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommunityRow renders with new posts 1`] = `
<li
  data-styleName="s.communityRow"
>
  <Link
    data-styleName="s.communityRowLink"
    replace={false}
    to="/c/undefined"
  >
    <div
      data-styleName="s.communityRowAvatar"
      style={Object {}}
    />
    <span
      data-styleName="s.community-name"
    />
  </Link>
</li>
`;

exports[`CommunityRow renders with zero new posts 1`] = `
<li
  data-styleName="s.communityRow"
>
  <Link
    data-styleName="s.communityRowLink"
    replace={false}
    to="/c/undefined"
  >
    <div
      data-styleName="s.communityRowAvatar"
      style={Object {}}
    />
    <span
      data-styleName="s.community-name"
    />
  </Link>
</li>
`;

exports[`Drawer renders a community list if networks are present 1`] = `
<div
  data-styleName="s.communityDrawer"
>
  <Icon
    data-styleName="s.closeDrawer"
    name="Ex"
  />
  <Logo />
  <Link
    data-styleName="s.settingsLink"
    replace={false}
    to="/settings"
  >
    <Icon
      data-styleName="s.settingsIcon"
      name="Settings"
    />
     Settings
  </Link>
  <ul
    data-styleName="s.communitiesList"
  >
    <li
      data-styleName="s.sectionTitle"
    >
      Networked Communities
    </li>
    <NetworkRow
      network={
        Object {
          "avatarUrl": "/wombat.png",
          "communities": Array [
            Object {
              "avatarUrl": "/foo.png",
              "id": "11",
              "name": "Foomunity",
              "newPostCount": 0,
              "slug": "foo",
            },
            Object {
              "avatarUrl": "/bar.png",
              "id": "22",
              "name": "Barmunity",
              "newPostCount": 7,
              "slug": "bar",
            },
          ],
          "id": "1",
          "name": "Wombat Network",
        }
      }
    />
    <li
      data-styleName="s.sectionTitle s.sectionTitleSeparator"
    >
      Independent Communities
    </li>
    <CommunityRow
      avatarUrl="/foo.png"
      id="11"
      name="Foomunity"
      newPostCount={0}
      slug="foo"
    />
    <CommunityRow
      avatarUrl="/bar.png"
      id="22"
      name="Barmunity"
      newPostCount={7}
      slug="bar"
    />
  </ul>
  <Button
    color="white"
    data-styleName="s.newCommunity"
    label="Start a Community"
  />
</div>
`;

exports[`Drawer renders with a current community 1`] = `
<div
  data-styleName="s.communityDrawer"
>
  <Icon
    data-styleName="s.closeDrawer"
    name="Ex"
  />
  <Logo
    community={
      Object {
        "avatarUrl": "/foo.png",
        "id": "11",
        "name": "Foomunity",
        "newPostCount": 0,
        "slug": "foo",
      }
    }
  />
  <Link
    data-styleName="s.settingsLink"
    replace={false}
    to="/settings"
  >
    <Icon
      data-styleName="s.settingsIcon"
      name="Settings"
    />
     Settings
  </Link>
  <Button
    color="white"
    data-styleName="s.newCommunity"
    label="Start a Community"
  />
</div>
`;

exports[`Drawer renders without a current community 1`] = `
<div
  data-styleName="s.communityDrawer"
>
  <Icon
    data-styleName="s.closeDrawer"
    name="Ex"
  />
  <Logo />
  <Link
    data-styleName="s.settingsLink"
    replace={false}
    to="/settings"
  >
    <Icon
      data-styleName="s.settingsIcon"
      name="Settings"
    />
     Settings
  </Link>
  <Button
    color="white"
    data-styleName="s.newCommunity"
    label="Start a Community"
  />
</div>
`;
